# ceramic-tests

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.hermetic-driver  Makefile  README.md  entrypoint.sh  port-forward.sh  topology.mjs
.github/workflows/: check_build_test.yml  create-release.yml  durable.yml  hermetic.yml  hermetic_long_lived.yml  performance.yml  pr-semantic-message.yml  prop.yml  publish.yml  run-durable-baremetal.yml  run-durable-tmp.yml  run-durable.yml  run-performance-baremetal.yaml  run-performance.yaml  rust.yml  schedule-durable.yml  smoke.yml  test.yml
ci-scripts/: build-test-binaries.sh  check_deps.sh  extract_docker_mount_cache.sh  inject_docker_mount_cache.sh  package.sh  publish.sh  publish_hermetic_driver.sh  publish_property.sh  schedule_durable_tests.sh
driver/: Cargo.toml
driver/src/: cli.rs  main.rs
driver/src/cli/: tester.rs
durable/: durable-driver.sh
env/: .env
fpm/: linux.fpm  osx.fpm
hermetic/: Cargo.toml
hermetic/src/: cli.rs  main.rs
hermetic/src/cli/: process-peers.sh  tester.rs
k8s/networks/: basic-go-rust.yaml  basic-go.yaml  basic-rust.yaml
k8s/tests/manifests/: prop.yaml  setup.yaml  smoke.yaml  tests.yaml
k8s/tests/scripts/: check-network.sh  delete-smoke-tests.sh  delete-tests.sh  run-smoke-tests.sh  run-tests.sh
networks/: basic-go.yaml  basic-rust.yaml  basic-simulation.yaml  experimental-rust.yaml  with-unavailable-ceramic-node.yaml
networks/migration/: basic-go-rust-post.yaml
performance/ceramic-anchoring-benchmark/: network.yaml  simulation.yaml
performance/ceramic-new-streams/: network.yaml
property/: Cargo.toml
property/env/: .env
property/src/: ceramic.rs
property/tests/: api.rs
simulations/: basic-simulation.yaml
src/: ceramic.rs  lib.rs
src/api/: mod.rs
src/ceramic/: mod.rs
src/tests/api/: mod.rs
suite/: Dockerfile  docker-compose.yml  entrypoint.sh  jest.config.json  package.json  pnpm-lock.yaml  tsconfig.json  update.sh
suite/env/: .env.dev  .env.example  .env.prod  .env.qa  .env.tnet
suite/src/__generated__/: definition.js
suite/src/__tests__/: anchor.test.ts  ceramic-cas-integration.test.ts  ceramic-ceramic-integration.test.ts  garbage-collect.test.ts  helpers.test.ts  longevity.test.ts  update.test.ts
suite/src/__tests__/correctness/fast/: anchor.test.ts  composedb-model-sync.test.ts  garbage-collect.test.ts  longevity.test.ts  model-correctness.test.ts  sync-events.test.ts  update.test.ts
suite/src/__tests__/correctness/slow/: ceramic-cas-integration.test.ts
suite/src/__tests__/fast/: all-event-types.tests.ts  anchor.test.ts  composedb-model-sync.test.ts  composedb-queries.test.ts  data-feed-api.test.ts  data-feed.test.ts  events.test.ts  garbage-collect.test.ts  get-events.test.ts  helpers.test.ts  longevity.test.ts  model-correctness.test.ts  sync-events.test.ts  update.test.ts
suite/src/__tests__/migration/: all-event-types.tests.ts
suite/src/__tests__/slow/: ceramic-cas-integration.test.ts  ceramic-ceramic-integration.test.ts
suite/src/composites/: my-composite.json  my-test-schema.graphql
suite/src/graphql-schemas/: basicSchema.ts
suite/src/handlers/: test-api.ts
suite/src/models/: modelConstants.ts  my-test-schema.graphql
suite/src/utils/: ceramicHelpers.ts  common.ts  composeDBHelpers.ts  composeDbHelpers.ts  didHelper.ts  dynamoDbHelpers.ts  metrics.ts  reporter.ts  rustCeramicHelpers.ts
tests/: api.rs
