[workspace]
resolver = "2"
members = ["property", "driver"]

[workspace.dependencies]
ceramic-tests-driver = { path = "./driver/" }
ceramic-tests-property = { path = "./property/" }

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nathaniel Cook <nvcook42@gmail.com>"]
license = "Apache-2.0/MIT"
repository = "https://github.com/3box/ceramic-tests"
