[package]
name = "ceramic-tests-property"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0.75"
ceramic-http-client = { git = "https://github.com/3box/ceramic-http-client-rs", branch = "main" }
ceramic-api-server = { git = "https://github.com/3box/rust-ceramic", branch = "main", default-features = false, features = [
    "client",
    # TODO: We do not need the server but the generated feature flags are broken
    # percent-encoding dep is not included with client feature alone.
    "server",
] }
ceramic-kubo-rpc-server = { git = "https://github.com/3box/rust-ceramic", branch = "main", default-features = false, features = [
    "client",
    # TODO: We do not need the server but the generated feature flags are broken
    # percent-encoding dep is not included with client feature alone.
    "server",
] }
dotenvy = "0.15.7"
hyper = { version = "0.14.27", features = ["client"] }
rand = "0.8.5"
schemars = "0.8.16"
serde = { version = "1.0.188", features = ["serde_derive"] }
swagger = "6.3.0"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "fs"] }
test-log = { version = "0.2.12", default-features = false, features = ["log"] }
url = { version = "2.2.2" }
json-patch = "1.0.0"
serde_json = "1.0.105"
backoff = { version = "0.4.0", features = ["tokio"] }
env_logger = "0.10.0"
